--- a/api/vercel.json
+++ b/api/vercel.json
@@ -2,11 +2,12 @@
   "version": 2,
   "routes": [
     {
-      "src": "/api/register",
+      "src": "/api/(.*)",
       "methods": ["GET", "POST", "PUT", "DELETE"],
+      "dest": "http://localhost:8801/api/$1",
       "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Credentials": "true"
+        "Access-Control-Allow-Origin": "https://vercel-app-client-ten.vercel.app",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE"
       }
     }
   ]
