--- a/api/vercel.json
+++ b/api/vercel.json
@@ -4,7 +4,7 @@
     {
       "src": "/api/(.*)",
       "methods": ["GET", "POST", "PUT", "DELETE"],
-      "dest": "http://localhost:8801/api/$1",
+      "dest": "https://vercel-app-api-three.vercel.app/api/",
       "headers": {
         "Access-Control-Allow-Origin": "https://vercel-app-client-ten.vercel.app",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE"
