--- a/api/vercel.json
+++ b/api/vercel.json
@@ -3,12 +3,24 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "methods": ["GET", "POST", "PUT", "DELETE"],
-      "dest": "https://vercel-app-api-three.vercel.app/api/",
-      "headers": {
-        "Access-Control-Allow-Origin": "https://vercel-app-client-ten.vercel.app",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE"
-      }
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Credentials",
+          "value": "true"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+        }
+      ]
     }
   ]
 }
